--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,17 +1,19 @@
+body {
+  width: 500px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .para,
 .small-para {
   color: hsl(0, 100%, 50%);
+  font-size: 22px;
 }
 
 .small-para {
   font-size: 12px;
 }
 
-.para {
-  font-size: 22px;
-}
-
-.confirm {
+#confirm-button {
   background: green;
   color: white;
   font-size: 20px;
@@ -24,12 +26,12 @@
   font-size: 20px;
 }
 
+.text {
+  color: green;
+  font-size: 28px;
+}
+
 .child {
   color: red;
   font-size: 14px;
-}
-
-div.text {
-  color: green;
-  font-size: 28px;
 }
