css flex section

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,22 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.flex-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  margin: 20px;
+}
+
+header {
+  margin: 20px;
+  font-size: 36px;
+  font-weight: 900;
 }
 
 img {
@@ -7,9 +24,8 @@ img {
   height: 100px;
 }
 
-.title {
-  font-size: 36px;
-  font-weight: 900;
+.info {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
